# flask-contacts-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
flask_contacts_demo/: app.py  data_layer.py  views.py
sql/: init.sql
tests/: test_data_layer.py
